# zeopp-backend

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README-en.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/: accessible_volume.py  blocking_spheres.py  cache.py  channel_analysis.py  distance_grid.py  framework_info.py  health.py  metrics.py  open_metal_sites.py  pore_diameter.py  pore_size_dist.py  probe_volume.py  ray_tracing.py  structure_info.py  surface_area.py  voronoi_network.py
app/core/: config.py  exceptions.py  handler.py  limiter.py  middleware.py  runner.py
app/mcp/: __init__.py  bootstrap.py  main.py  stdio_main.py  tools.py
app/models/: accessible_volume.py  blocking_spheres.py  channel_analysis.py  distance_grid.py  framework_info.py  open_metal_sites.py  pore_diameter.py  pore_size_dist.py  probe_volume.py  ray_tracing.py  structure_info.py  surface_area.py  voronoi_network.py
app/utils/: cleanup.py  file.py  logger.py  parser.py
docs/: API_DOCUMENTATION.md  API_DOCUMENTATION_EN.md  API_MAPPING.md  MCP_INTEGRATION.md  ZEO++_REFERENCE.md
examples/: README.md
examples/curl/: api_examples.bat  api_examples.sh
examples/python/: basic_usage.py  batch_analysis.py  hkust1_acetylene_analysis.py  requirements.txt
frontend/: Dockerfile  nginx.conf
scripts/: add_to_featherflow.sh  e2e_check.py  install_zeopp.sh
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_parsers.py
(+9 files in other folders)
