[project]
name = "zeopp-backend"
version = "0.3.2"
description = "Zeo++ API & MCP Service for porous material structural analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shibo Li" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.95.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sh>=2.0.0,<3.0.0",
    "rich>=13.3.5,<14.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
